project/k8s/Back-end-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-system-master-backend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ticket-system-master-backend
    spec:
      containers:
        - name: ticket-system-master-backend
          image: jainmayank909/backend:latest
          ports:
            - containerPort: 5000
              name: nodejs-port
  selector:
    matchLabels:
      app: ticket-system-master-backend
