project/k8s/Front-end-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-system-master-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ticket-system-master-frontend
    spec:
      containers:
        - name: ticket-system-master-frontend
          image: jainmayank909/frontend:latest
          ports:
            - containerPort: 3000
              name: http-port   
              
  selector:
    matchLabels:
      app: ticket-system-master-frontend
