project/k8s/Back-end-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticket-system-master-backend
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: ticket-system-master-backend
  type: ClusterIP
