project/k8s/Front-end-Service.yml
apiVersion: v1
kind: Service
metadata:
  name: ticket-system-master-frontend
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: http-port
  selector:
    app: ticket-system-master-frontend
  type: LoadBalancer
