project/k8s/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: my-ingress
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   rules:
#     - host: kubernetes.docker.internal
#       http:
#         paths:
#           - path: /api
#             backend:
#               serviceName: ticket-system-master-backend
#               servicePort: 5000
#           - path: /
#             backend:
#               serviceName: ticket-system-master-frontend
#               servicePort: 80

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ticket-system-master-backend
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ticket-system-master-frontend
                port:
                  name: http
